# re-pcounter-tools

./: .gitignore  README.md  build-envytools.sh  build-valgrind-mmt.sh  build.sh
doc/nv50/: 86-pcounter.txt  perfkit-counter-attribute.txt.txt
doc/nvc0/: mpcounter.txt  nvd9-pcounter.txt
doc/nvc1/: compute_counters.txt  compute_counters_mp.txt  compute_counters_pcounter.txt  l1_events.txt
doc/nvc1-nvc4-nvcf/: mpcounter.txt
doc/nvc4-nvcf/: nvc4-nvcf-mpcounter.txt  nvc4-nvcf-pcounter.txt
doc/nve0/: nve4-pcounter.txt
doc/nve4/: compute_counters.txt  compute_counters_mp.txt  mpcounter.txt
doc/nve6/: compute_counters.txt  compute_counters_mp.txt  compute_counters_pcounter.txt  mpcounter.txt
hwdocs/pcounter/: compute_capability.rst  nv50-counters-perfs.rst  nv50-intro.rst  nv50-pcounter.rst  nv50-pcounter.txt  nv50.rst  nv84.rst  nv86-pcounter.txt  nv86.rst  nv94.rst  nv98.rst  nva0.rst  nva5-pcounter.rst
old_doc/nv50/: 86-mpcounter.txt  a3-pcounter.txt
old_doc/nve0/: nve4-pcounter.txt
src/: Makefile  cuda_sample.cu  cupti_trace.cpp  lookup_trace.c  mmiotrace.c  nv-ioctls-trace.c
src/callback_event/: .callback_event.cu.swp  Makefile  (+1 more)
util/: build_mesa.sh  dump_counters_state.sh  enable-mmiotrace.sh  enable-mmiotrace_without_X.sh  install_nouveau.sh  mmiotrace_start.sh  mmiotrace_stop.sh  nouveau-to-nvidia.sh  nvidia-to-nouveau.sh  peek_diff.py  reload_nouveau.sh  script.sh
util/tests-pcounter-signals/ia/src/: CMakeLists.txt  GraphicsItem.h  GraphicsPGM3DItem.cpp  GraphicsScene.cpp  GraphicsScene.h  INSTALL  gl.h
valgrind/: trace_nv_ioctls.diff
(+2839 files in other folders)
